2000-10-20  John Harper  <jsh@eazel.com>

	* widgets/command.jl: support (but currently ignore)
	user-levels associated with commands

	* user-level.jl (user-level-is-appropriate-p): new function

2000-10-10  John Harper  <john@dcs.warwick.ac.uk>

	* apply.jl (apply-changes-for): catch errors from
	wm-apply-changes and display them in a dialog after reverting
	the changed slots

2000-09-25  John Harper  <john@dcs.warwick.ac.uk>

	* widgets/keymap.jl (make-keymap:binding-item): add a `Key:'
	label to the event widget

	* widgets/event.jl (make-event-item): don't prefix the widget
	with a `Key:' label, it's more useful without it

	* layout.jl (document-slot): handle adding any tooltip embedded
	in the slots documentation string

2000-09-20  John Harper  <john@dcs.warwick.ac.uk>

	* version 0.31

2000-09-12  John Harper  <john@dcs.warwick.ac.uk>

	* shell.jl (initialize-shell): unless creating a plug, put the
	root widget inside a raised frame

2000-09-11  John Harper  <john@dcs.warwick.ac.uk>

	* slot.jl, shell.jl, main.jl.in, group.jl, ChangeLog: 
	* layouts/keymaps.jl: 
	* widgets/match-window.jl, widgets/keymap.jl,
	widgets/frame-style.jl, widgets/command.jl: 

	No need to explicitly open `rep.io.streams' anymore

2000-09-08  John Harper  <john@dcs.warwick.ac.uk>

	* slot.jl, shell.jl, main.jl.in, layout.jl, i18n.jl, group.jl,
	apply.jl: 

	* layouts/keymaps.jl: 

	* widgets/workspace-geometry.jl, widgets/match-window.jl,
	widgets/keymap.jl, widgets/icon.jl, widgets/frame-style.jl,
	widgets/command.jl: 

	Open the necessary modules that aren't included in `rep'
	structure anymore (rep.regexp, rep.system, rep.io.streams,
	rep.io.files, rep.io.file-handlers)

2000-09-04  John Harper  <john@dcs.warwick.ac.uk>

	* main.jl.in: /bin/sh on solaris 8 doesn't like to pass
	environment settings on the same line as exec stmts. So set
	REP_LOAD_PATH, export it, then run `rep'

	* wm.jl (wm-documentation): use the `command-documentation'
	function
