@@ -1,3 +1,7 @@
+2000-10-26  John Harper  <jsh@eazel.com>
+
+	* widgets/command.jl: now supports #:user-level's in commands
+
 2000-10-20  John Harper  <jsh@eazel.com>
 
 	* widgets/command.jl: support (but currently ignore)
